--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/node": "^12.12.62",
     "@types/react": "^16.9.49",
     "@types/react-dom": "^16.9.8",
+    "axios": "^0.20.0",
     "framer-motion": "^2.7.5",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
