--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-medium-image-zoom": "^4.3.1",
     "react-parallax": "^3.0.3",
     "react-responsive": "^8.1.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "react-scroll": "^1.8.1",
     "react-visibility-sensor": "^5.1.1",
@@ -56,6 +57,7 @@
   },
   "devDependencies": {
     "@types/react-responsive": "^8.0.2",
+    "@types/react-router-dom": "^5.1.6",
     "@types/react-scroll": "^1.8.0",
     "@types/uuid": "^8.3.0",
     "node-sass": "^4.14.1"
