--- a/package.json
+++ b/package.json
@@ -24,13 +24,14 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-medium-image-zoom": "^4.3.1",
+    "react-minimal-pie-chart": "^8.0.1",
     "react-parallax": "^3.0.3",
     "react-responsive": "^8.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "react-scroll": "^1.8.1",
     "react-visibility-sensor": "^5.1.1",
-    "typescript": "^3.7.5",
+    "typescript": "^3.9.7",
     "uuid": "^8.3.0"
   },
   "scripts": {
